fix: fix header underline visible in Chrome

--- a/src/pages/W/components/header/Header.css
+++ b/src/pages/W/components/header/Header.css
@@ -45,7 +45,7 @@
 .nav-item-active {
   color: transparent;
   font-family: monospace;
-  text-decoration: underline;
+  text-decoration: none;
   font-size: 1.5rem;
   position: relative;
   margin-left: 1rem;
